--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "researchhub",
   "scripts": {
+    "build": "pnpm run -r build",
     "dev": "caddy start --config caddy/Caddyfile.dev && pnpm run -r --parallel --aggregate-output dev"
   }
 }
