--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "researchhub",
   "scripts": {
-    "build": "pnpm run -r build",
-    "dev": "caddy start --config caddy/Caddyfile.dev && pnpm run -r --parallel --aggregate-output dev",
-    "start": "pnpm run -r start"
+    "dev": "caddy start --config caddy/Caddyfile.dev && pnpm run -r --parallel --aggregate-output dev"
   }
 }
